--- a/app/views/letters/partial/_new_letter.html.erb
+++ b/app/views/letters/partial/_new_letter.html.erb
@@ -1,9 +1,9 @@
 <div class="max-w-2xl mx-auto">
-  <%= form_with(model: @letter) do |form| %>
+  <%= form_with model: @letter do |form| %>
     <div class="md:flex items-center">
       <div class="md:w-1/2 w-full flex flex-col">
         <%= form.label :收件者, for:"recipient", class:"font-semibold leading-none" %>
-        <%= form.text_field :recipient ,type:"text", class:"leading-none text-gray-900 p-3 focus:outline-none focus:border-blue-700 mt-4 bg-gray-100 border rounded border-gray-200" %>
+        <%= form.text_field :recipient, required: true ,pattern:'[^@]+@[^@]+\.[a-zA-Z]{2,6}',type:"text", placeholder: "5xruby@yimails.com", class:"leading-none text-gray-900 p-3 focus:outline-none focus:border-blue-700 mt-4 bg-gray-100 border rounded border-gray-200" %>
       </div>
       <div class="md:w-1/2 w-full flex flex-col md:ml-6 md:mt-0 mt-4">
         <%= form.label :副本, for:"carbon_copy", class:"font-semibold leading-none" %>
@@ -15,14 +15,15 @@
         <%= form.label :主旨, for:"subject", class:"font-semibold leading-none" %>
         <%= form.text_field :subject ,type:"text", class:"leading-none text-gray-900 p-3 focus:outline-none focus:border-blue-700 mt-4 bg-gray-100 border rounded border-gray-200" %>
       </div>
+    
     </div>
     <div class="md:flex items-center mt-8">
       <div class="w-full flex flex-col">
-        <%= form.label :內容, for:"content", class:"font-semibold leading-none mb-4" %>
+        <%= form.label :內容, for:"content",class:"font-semibold leading-none mb-4" %>
         <%= form.rich_text_area :content ,type:"text", class:"leading-none text-gray-900 p-3 focus:outline-none focus:border-blue-700 mt-4 bg-gray-100 border rounded border-gray-200" %>
       </div>
     </div>
-    <div class="flex items-center justify-center w-full">
+    <div class="flex items-center justify-center w-full ">
       <%= form.submit :傳送, class:"mt-6 font-semibold leading-none text-white py-4 px-10 bg-blue-500 rounded hover:bg-blue-600 focus:ring-2 focus:ring-offset-2 focus:ring-blue-700 focus:outline-none" %>
     </div>
   <% end %>
