--- a/app/views/letters/partial/_show_mailbox.html.erb
+++ b/app/views/letters/partial/_show_mailbox.html.erb
@@ -122,7 +122,7 @@
       </div>
       <div class="space-y-2">
         <p class="text-base font-normal text-gray-500">
-          <%= letter.rich_text_body %>
+          <iframe src="<%= plain_letter_path(@letter) %>" style="width: 100%; height: 100vh" />
           <%= letter.rich_text_content %>
           <% letter.attachments.each do |attachment| %>
             <% if attachment.content_type.include?('image') %>
