--- a/app/views/letters/show.html.erb
+++ b/app/views/letters/show.html.erb
@@ -1,2 +1,2 @@
 <%= render "letters/partial/navbar", labels: @label_folder %>
-<%= render "letters/partial/show_mailbox", letter: @letter , labels: @labels %>
+<%= render "letters/partial/show_mailbox", letter: @letter, labels: @labels, frame: @letter%>
